apps/arr/plex/gluetun.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gluetun
  namespace: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gluetun
      app: gluetun
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gluetun
        app: gluetun
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:v3.40
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
