apps/arr/plex/wireguard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  namespace: arr
  labels:
    app: wireguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      containers:
        - name: wireguard
          image: linuxserver/wireguard:latest
          securityContext:
            privileged: true  # Needed for WireGuard module
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: wireguard-config
              mountPath: /config
            - name: modules
              mountPath: /lib/modules
      volumes:
        - name: wireguard-config
          hostPath:
            path: /var/data/persistence/wireguard/config
            type: DirectoryOrCreate
        - name: modules
          hostPath:
            path: /var/data/persistence/wireguard/modules
            type: DirectoryOrCreate
